--- a/resources/css/index.scss
+++ b/resources/css/index.scss
@@ -1,4 +1,5 @@
 @import "common";
+@import "@toast-ui/editor/dist/toastui-editor-viewer.css";
 
 img {
     object-fit: cover;
@@ -38,6 +39,24 @@ img {
 .menu-goofy-border {
     border-top: var(--goofy-color) solid 5px;
     border-bottom: var(--goofy-color) solid 5px;
+}
+
+#foodTruck {
+    .top-img {
+        max-width: 500px;
+    }
+}
+
+#viewer {
+    a {
+        display: inline-block;
+    }
+}
+
+.sponsor-logo {
+    height: 45px;
+    width: auto;
+    object-fit: contain;
 }
 
 @media (max-width: 768px) {
